devopsMetadata/objects/Pipeline_Connection__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>Orgs__c</referenceTo>
        <relationshipLabel>Pipeline Connections (Destination Environment)</relationshipLabel>
        <relationshipName>Pipeline_Target_Connections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pipeline for Connections</description>
        <label>Pipeline</label>
        <referenceTo>Pipeline__c</referenceTo>
        <relationshipLabel>Pipeline Connections</relationshipLabel>
        <relationshipName>Pipeline_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>Orgs__c</referenceTo>
        <relationshipLabel>Pipeline Connections</relationshipLabel>
        <relationshipName>Pipeline_Source_Connections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Pipeline Connection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Source_Environment__c</columns>
        <columns>Destination_Environment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Pipeline Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Source_And_Destination_Cannot_Be_Same</fullName>
        <active>true</active>
        <errorConditionFormula>Source_Environment__c  =  Destination_Environment__c</errorConditionFormula>
        <errorDisplayField>Destination_Environment__c</errorDisplayField>
        <errorMessage>Source &amp; Destination Environment Cannot Be Same</errorMessage>
    </validationRules>
</CustomObject>